@@ -20,6 +20,8 @@ Version 1.8.2
        Putty/Plink v0.63. (Stefan)
 - BUG: Issue #536: Crash in TortoiseMerge
        trying to find moved blocks. (Stefan)
+- BUG: Issue #537: Unnecessary warning after
+       successful auto-resolve. (Stefan)
 
 Version 1.8.1
 - BUG: Issue #481: wrong parameter when
